<resources>
    <string name="app_name">MMApplication</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_retype">Retype password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Dont have an account?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="user_exist">User with this email already exists</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="friend_request">Friend request from </string>
    <string name="meeting_request">Meeting </string>

    <string-array name="activity_choice">
        <item>SCHOOL</item>
        <item>WORK</item>
        <item>SPORT</item>
        <item>OTHER</item>
    </string-array>

    <string-array name="activity_time">
        <item>Only once</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
    </string-array>



</resources>
